admin page table cell alignment fix

--- a/contentcuration/contentcuration/static/less/admin_grid.less
+++ b/contentcuration/contentcuration/static/less/admin_grid.less
@@ -24,7 +24,7 @@
 		.can_edit, .editors{
 			display: grid;
 			grid-template-columns: max-content 0em;
-			margin: auto;		
+			margin: 0 auto;		
 		}
 		.table_actions{
 			grid-row: 1 / span 1;
